--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 <a href="./Page/page6.html" target="_blank">6.Iframe</a><br>
                 <a href="./Page/page7.html" target="_blank">7.Extra</a><br>
                 <a href="./Page/page8.html" target="_blank">8.Frameset</a><br>
-                <a href="./Page/page9.html" target="_blank">9.Audio & Video</a><br><br><br>
+                <a href="./Page/page9.html" target="_blank">9.Audio & Video</a><br>
+                <a href="./Page/page13.html" target="_blank">10.Invitation Example</a><br><br><br>
 			</h2>
             <h1>Index of CSS</h1>
             <h2>
