added screen shot of 16 programs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="./Page/page7.html" target="_blank">7.Extra</a><br>
                 <a href="./Page/page8.html" target="_blank">8.Frameset</a><br>
                 <a href="./Page/page9.html" target="_blank">9.Audio & Video</a><br>
-                <a href="./Page/page13.html" target="_blank">10.Invitation Example</a><br><br><br>
+                <a href="./Page/page13.html" target="_blank">10.16 programs example</a><br><br><br>
 			</h2>
             <h1>Index of CSS</h1>
             <h2>
