--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <a href="./Page/cw3.html" target="_blank">3.29Jan2020</a> <br>
                 <a href="./Page/cw4.html" target="_blank">4.03Feb2020</a> <br>
 			</h2>
+			<h1 id="WDcoursera">Coursera WD</h1>
+			<h2>
+			  <a href="./assignment-1/index.html" target="_blank">CSS week2</a>
+			</h2>
 
     </body>
 </html> 
