--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 			</h2>
 			<h1 id="WDcoursera">Coursera WD</h1>
 			<h2>
-			  <a href="./assignment-1/index.html" target="_blank">CSS week2</a>
+			  <a href="./assignment-1/index.html" target="_blank">CSS week2</a><br/>
+			  <a href="./assignment-1/page31.html" target="_blank">CSS week3</a><br/>
+			  
 			</h2>
 
     </body>
