--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 			<h2>
 			  <a href="./assignment-1/index.html" target="_blank">CSS week2</a><br/>
 			  <a href="./assignment-1/page31.html" target="_blank">CSS week3</a><br/>
+			  <a href="./javascript/index.html" target="_blank">JavaScript week1</a><br/>
+			  <a href="./javascript/week4/index.html" target="_blank">JavaScript week4</a><br/>
 			  
 			</h2>
 
