--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
                                         <!-- navigationbar -->
-    <nav class="navbar navbar-expand-sm navbar-inverse fixed-top navbar-dark bg-dark" data-spy="affix"
+    <nav class="navbar navbar-expand-lg navbar-inverse fixed-top navbar-dark bg-dark" data-spy="affix"
         data-offset-top="197">
 
         <div class="navbar-header">
@@ -166,7 +166,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="./index1.html" >Extra stuff of code</a>
+                <a href="./index1.html" >Extra stuff of code</a>*best viewed in Chrome desktop
             </div>
         </div>
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
