--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
                                         <!-- navigationbar -->
-    <nav class="navbar navbar-expand-lg navbar-inverse fixed-top navbar-dark bg-dark" data-spy="affix"
+    <nav class="navbar navbar-expand-sm navbar-inverse fixed-top navbar-dark bg-dark" data-spy="affix"
         data-offset-top="197">
 
         <div class="navbar-header">
