testing img in a

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://t.me/YogeshBavishi1" ><i class="fa fa-telegram" style="font-size: 30px;color:#25a3e1;" title="Message On Telegram"></i></a>   
+                            <a href="https://t.me/YogeshBavishi1" ><img class="fa fa-telegram" style="font-size: 30px;color:#25a3e1;" title="Message On Telegram"></img></a>   
                         </li>
                     </ul>
                 </div>
