--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
    
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" data-spy="affix" data-offset-top="197">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar1">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar1" value="CollapsibleButton">
+                <i style="display: none;">fixed</i>
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="#">My Web Resume</a>
