--- a/index.html
+++ b/index.html
@@ -129,42 +129,42 @@
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://api.whatsapp.com/send?phone=919409807975&text=Hi%20Yogesh%2c%0d%0a&source=&data=&app_absent=" ><i class="fa fa-whatsapp" style="font-size: 30px;color:#00e676;" title="Message on Whatsapp"></i><img src="" alt="WhatsApp Icon"/></a>   
+                            <a href="https://api.whatsapp.com/send?phone=919409807975&text=Hi%20Yogesh%2c%0d%0a&source=&data=&app_absent=" ><i class="fa fa-whatsapp" style="font-size: 30px;color:#00e676;" title="Message on Whatsapp"></i><img src="#" alt="WhatsApp Icon"/></a>   
                         </li>
                     </ul>
                 </div>
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="mailto:yogeshbavishi199@gmail.com?subject=Feedback&body=Message" ><i class="fa fa-envelope-o" style="font-size: 30px;color: #db4437;" title="Send an Email"></i><img src="" alt="Email Icon"/></a>   
+                            <a href="mailto:yogeshbavishi199@gmail.com?subject=Feedback&body=Message" ><i class="fa fa-envelope-o" style="font-size: 30px;color: #db4437;" title="Send an Email"></i><img src="#" alt="Email Icon"/></a>   
                         </li>
                     </ul>
                 </div>
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://www.linkedin.com/in/yogesh-bavishi/" ><i class="fa fa-linkedin-square" style="font-size: 30px;color: #0073B0;" title="LinkedIn Profile"></i><img src="" alt="LinkedIn Icon"/></a>   
+                            <a href="https://www.linkedin.com/in/yogesh-bavishi/" ><i class="fa fa-linkedin-square" style="font-size: 30px;color: #0073B0;" title="LinkedIn Profile"></i><img src="#" alt="LinkedIn Icon"/></a>   
                         </li>
                     </ul>
                 </div>
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://github.com/yogesh-b" ><i class="fa fa-github" style="font-size: 30px;color: #000000;" title="Github Profile"></i><img src="" alt="Github Icon"/></a>   
+                            <a href="https://github.com/yogesh-b" ><i class="fa fa-github" style="font-size: 30px;color: #000000;" title="Github Profile"></i><img src="#" alt="Github Icon"/></a>   
                         </li>
                     </ul>
                 </div>
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://www.freecodecamp.org/yogesh-b" ><i class="fa fa-free-code-camp" style="font-size: 30px;color: #0a0a23;" title="FreeCodeCamp Profile"></i><img src="" alt="FreeCodeCamp Icon"/></a>   
+                            <a href="https://www.freecodecamp.org/yogesh-b" ><i class="fa fa-free-code-camp" style="font-size: 30px;color: #0a0a23;" title="FreeCodeCamp Profile"></i><img src="#" alt="FreeCodeCamp Icon"/></a>   
                         </li>
                     </ul>
                 </div>
                 <div class="col-sm-1 mb-md-0 mb-3">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://t.me/YogeshBavishi1" ><i class="fa fa-telegram" style="font-size: 30px;color:#25a3e1;" title="Message On Telegram"></i><img src="" alt="Telegram Icon"/></a>   
+                            <a href="https://t.me/YogeshBavishi1" ><i class="fa fa-telegram" style="font-size: 30px;color:#25a3e1;" title="Message On Telegram"></i><img src="#" alt="Telegram Icon"/></a>   
                         </li>
                     </ul>
                 </div>
