--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="col-sm-12 container-fluid" id="about_me">
             <h1>About Me</h1>
             <p>I am Yogesh Bavishi, a Computer Engineering student from <abbr title="Government Engineering College, Rajkot">GEC Rajkot</abbr>.
-                I belong to Barvala Bavishi, a village in Amreli(Gujarat).  I like to try new apps and softwares on PC and smartphone. 
+                I belong to Barvala Bavishi, a village in Amreli(Gujarat).  I like to try new apps and features on PC and smartphone. 
             </p>
         </section>
         <section class="col-sm-12  container-fluid" id="education">
@@ -91,7 +91,7 @@
                             <td><abbr title="Gujarat Secondary and Higher Secondary Education Board">GSHSEB</abbr></td>
                             <td>B.J. Doshi Highschool, Amrapur</td>
                             <td>2015</td>
-                            <td>80.16</td>
+                            <td>80.17</td>
                         </tr>
                         <tr><td></td><td></td><td></td><td></td><td></td></tr>
                     </tbody>
@@ -102,15 +102,16 @@
         <section class="col-sm-12 container-fluid" id="certificates">
             <h1>Certificates</h1>
             <ul class="list-group">
+                <li class="list-group-item">Web Design for Everybody: Basics of Web Development & Coding <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/PQVUVKDS3ANL" class="small">Verifiable On Coursera</a></li>
+                <li class="list-group-item">Python for Everybody Specialization <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/VEDHY6YHUDET" class="small">Verifiable On Coursera</a></li>
                 <li class="list-group-item">Building Database Applications in PHP <a href="https://www.coursera.org/account/accomplishments/records/5VTNF4475JY9" class="small">Verifiable On Coursera</a></li>
-                <li class="list-group-item">Interactivity with JavaScript <a href="https://www.coursera.org/account/accomplishments/records/JMJ6H6D38C29" class="small">Verifiable On Coursera</a></li>
-                <li class="list-group-item">Advanced Styling with Responsive Design <a href="https://www.coursera.org/account/accomplishments/records/U8LFXMFCQYHT" class="small">Verifiable On Coursera</a></li>
                 <li class="list-group-item">Fundamentals of Graphic Design <a href="https://www.coursera.org/account/accomplishments/records/9BZJ9XKJXPRM" class="small">Verifiable On Coursera</a></li>
                 <li class="list-group-item">Introduction to Typography <a href="https://www.coursera.org/account/accomplishments/records/FXEUHWSQAPQE" class="small">Verifiable On Coursera</a></li>
             </ul>
         </section>
         <section class="col-sm-12 container-fluid" id="portfolio" style="padding-top:70px;padding-bottom:70px">
             <h1>Portfolio </h1>
+            <p>Final project of  Specialization "Web Design for Everybody" ...<span class="small">This website itself</span></p>
             <p>Final project of course "Building Database Applications in PHP"...<a href="http://gecr.byethost6.com/wa4e/week5code/index.php" class="small">Visit</a></p>
             <p>Final project of course "Introduction to Typography"...<a href="https://github.com/Yogesh-B/GD/raw/master/typeWeek4.pdf" class="small">Visit</a></p>
         </section>
