--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Yogesh's Web Resume</title>
+    <title>Yogesh's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
     <!-- <meta content="viewport" content="width=device-width, initial-scale=1" /> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -34,7 +34,7 @@
                 <i style="display: none;">fixed</i>
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">My Web Resume</a>
+            <a class="navbar-brand" href="#">My Portfolio</a>
         </div>
      
         <div class="collapse navbar-collapse" id="navbar1">
